styles.css e index.html não finalizados

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
             </form>
         </div>
     </header>
+    <section id="key-benefits">
+        <h2>O que você vai aprender:</h2>
+        <div class="benefits">
+            <div class="benefit">
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
