--- a/index.html
+++ b/index.html
@@ -59,9 +59,76 @@
         <h2>O que você vai aprender:</h2>
         <div class="benefits">
             <div class="benefit">
-
+                <div id="benefit-1" class="benefit-img"></div>
+                <p>Alguma coisa muito legal que vai fazer a diferença na vida do participante.</p>
+            </div>
+            <div class="benefit">
+                <div class="benefit">
+                    <div id="benefit-2" class="benefit-img"></div>
+                    <p>Alguma coisa muito legal que vai fazer a diferença na vida do participante.</p>
+                </div>
+                <div class="benefit">
+                    <div class="benefit">
+                        <div id="benefit-3" class="benefit-img"></div>
+                        <p>Alguma coisa muito legal que vai fazer a diferença na vida do participante.</p>
+                    </div>
+                </div>
+    </section>
+    <section id="id-location">
+        <div id="id-address">
+            <i class="bi bi-geo-alt-fill"></i>
+            <div id="id-address-details">
+                <p>Rua do Evento, 1333</p>
+                <p>Bairro tal</p>
+                <p>Abertura: 14h</p>
             </div>
         </div>
+        <div id="id-location">
+            <h3>Local de destaque</h3>
+            <p>
+                O evento será realizado em um local prestigiado pelos amantes de Design de Interiores, onde teremos
+                exemplos de vários ambientes, tanto internos quanto externos.
+            </p>
+        </div>
+    </section>
+    <section id="details">
+        <div class="detail" id="detail-1">
+            <img src="img/hrz-3.jpg" alt="Sala decorada em tons pardos">
+            <div class="detail-description">
+                <h3>Conheça os ambientes que você vai aprender a decorar</h3>
+            </div>
+        </div>
+        <div class="detail" id="detail-2">
+            <div class="detail-description">
+                <h3>Detalhes</h3>
+                <ul>
+                    <li>Posicionamento</li>
+                    <li>Aproveitamento de espaço</li>
+                    <li>Combinação de cores</li>
+                    <li>Organização</li>
+                    <li>E muito mais...</li>
+                </ul>
+            </div>
+            <img src="img/hrz-4.jpg" alt="Sala de jantar decorada">
+        </div>
+        <div class="detail" id="detail-3">
+            <img src="img/hrz-5.jpg" alt="Sala decorada em tons escuros">
+            <div class="detail-description">
+                <h3>Objetos</h3>
+                <ul>
+                    <li>Cadeiras</li>
+                    <li>Mesas</li>
+                    <li>Espelhos</li>
+                    <li>Plantas</li>
+                    <li>Cortinas</li>
+                    <li>E muito mais...</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section id="cta">
+        <h3>Gostou? Então se inscreva:</h3>
+        <button class="btn">Solicitar Inscrição</button>
     </section>
 </body>
 
